@@ -8,6 +8,9 @@ This file contains OFSwitch13 release notes (most recent releases first).
 Release 3.X.X (XXX XX, XXXX)
 ============================
 
+- Fixing the correlation between queue ID and priority in OFSwitch13Queue:
+  From now one, the lower is the queue ID, the higher is its priority.
+
 - The OFSwitch13Device FlowTableSize, GroupTableSize, and MeterTableSize
   attributes can now be adjusted at any time.
 
